src/objects/pos_trans_discount__x.object
<CustomObject>
    <description>caesars$pos_trans_discount</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$pos_trans_discount</externalName>
    <fields>
        <fullName>c_file_prop_cd__c</fullName>
        <description>c_file_prop_cd</description>
        <externalDeveloperName>c_file_prop_cd</externalDeveloperName>
        <label>c_file_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_rev_center_cd__c</fullName>
        <description>c_pos_rev_center_cd</description>
        <externalDeveloperName>c_pos_rev_center_cd</externalDeveloperName>
        <label>c_pos_rev_center_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_rev_center_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>c_pos_rev_center_cd_fk</externalDeveloperName>
        <label>POS Revenue Center</label>
        <referenceTo>POS_Revenue_Center__c</referenceTo>
        <relationshipLabel>Pos Trans Discounts</relationshipLabel>
        <relationshipName>Pos_Trans_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_pos_trans_id__c</fullName>
        <description>c_pos_trans_id</description>
        <externalDeveloperName>c_pos_trans_id</externalDeveloperName>
        <label>c_pos_trans_id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>c_prop_cd_fk</externalDeveloperName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pos Trans Discounts</relationshipLabel>
        <relationshipName>Pos_Trans_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_trans_discount_type_desc__c</fullName>
        <description>c_trans_discount_type_desc</description>
        <externalDeveloperName>c_trans_discount_type_desc</externalDeveloperName>
        <label>c_trans_discount_type_desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_trans_type_cd__c</fullName>
        <description>c_trans_type_cd</description>
        <externalDeveloperName>c_trans_type_cd</externalDeveloperName>
        <label>c_trans_type_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>contact</externalDeveloperName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pos Trans Discounts</relationshipLabel>
        <relationshipName>Pos_Trans_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>d_pos_trans_dt__c</fullName>
        <description>d_pos_trans_dt</description>
        <externalDeveloperName>d_pos_trans_dt</externalDeveloperName>
        <label>d_pos_trans_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_pos_trans_end_time__c</fullName>
        <description>d_pos_trans_end_time</description>
        <externalDeveloperName>d_pos_trans_end_time</externalDeveloperName>
        <label>d_pos_trans_end_time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_pos_trans_start_time__c</fullName>
        <description>d_pos_trans_start_time</description>
        <externalDeveloperName>d_pos_trans_start_time</externalDeveloperName>
        <label>d_pos_trans_start_time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_discount_amt__c</fullName>
        <description>f_discount_amt</description>
        <externalDeveloperName>f_discount_amt</externalDeveloperName>
        <label>f_discount_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_check_nbr__c</fullName>
        <description>i_check_nbr</description>
        <externalDeveloperName>i_check_nbr</externalDeveloperName>
        <label>i_check_nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_pos_trans_discount_seq_id__c</fullName>
        <description>i_pos_trans_discount_seq_id</description>
        <externalDeveloperName>i_pos_trans_discount_seq_id</externalDeveloperName>
        <label>i_pos_trans_discount_seq_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_xref_dmid__c</fullName>
        <description>i_xref_dmid</description>
        <externalDeveloperName>i_xref_dmid</externalDeveloperName>
        <label>i_xref_dmid</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pos Trans Discount</label>
    <pluralLabel>Pos Trans Discounts</pluralLabel>
</CustomObject>